gap bug fix and images

--- a/src/Pages/TrendingProduct/trendingProduct.css
+++ b/src/Pages/TrendingProduct/trendingProduct.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Bitter:ital,wght@0,100..900;1,100..900&family=Caveat:wght@400..700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Faculty+Glyphic&family=Funnel+Display:wght@300..800&family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Satisfy&display=swap');
 
+
+
+/* trending section */
+
 .trending_grid_1{
 
     display: grid;
     grid-template-rows: 550px 1fr;
-    padding: 0 6px;
+    padding-left:  6px;
 
 }
 
@@ -38,6 +42,15 @@
 }
 
 
+
+
+
+
+/* shop by brand  section */
+/* 
+.image_div{
+    flex:1;
+} */
 
 
 @media (max-width: 480px) {
